--- a/committee.html
+++ b/committee.html
@@ -68,178 +68,170 @@
 <div class="page-hero"><h1>Organizing Committee</h1></div>
 
 <section class="section">
-    <div class="about-container">
+<div class="about-container">
 
-        <div class="committee-group">
-            <h3 class="group-title">Patron</h3>
-            <div class="member-grid">
-                <div class="member-card">
-                    <div class="member-name">Prof. B. B. Chaudhuri</div>
+    <div class="committee-group">
+        <h3 class="group-title">Patron</h3>
+        <div class="member-grid">
+            <div class="member-card">
+                <img src="assets/images/B.jpg" alt="Prof. B. B. Chaudhuri" class="member-photo">
+                <div class="member-info">
+                    <a href="#" class="member-link"><div class="member-name">Prof. B. B. Chaudhuri</div></a>
                     <div class="member-affil">Indian Statistical Institute (ISI), Kolkata, India</div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="committee-group">
-            <h3 class="group-title">Honorary General Chair</h3>
-            <div class="member-grid">
-                <div class="member-card">
-                    <div class="member-name">Prof. Anil K Jain</div>
+    <div class="committee-group">
+        <h3 class="group-title">Honorary General Chair</h3>
+        <div class="member-grid">
+            <div class="member-card">
+                <img src="assets/images/Anil.jpg" alt="Prof. Anil K Jain" class="member-photo">
+                <div class="member-info">
+                    <a href="#" class="member-link"><div class="member-name">Prof. Anil K Jain</div></a>
                     <div class="member-affil">Michigan State University, USA</div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="committee-group">
-            <h3 class="group-title">General Chairs</h3>
-            <div class="member-grid">
-                <div class="member-card">
-                    <div class="member-name">Prof. Prasad Krishna</div>
+    <div class="committee-group">
+        <h3 class="group-title">General Chairs</h3>
+        <div class="member-grid">
+            <div class="member-card">
+                <img src="assets/images/Prasad.jpg" alt="Prof. Prasad Krishna" class="member-photo">
+                <div class="member-info">
+                    <a href="#" class="member-link"><div class="member-name">Prof. Prasad Krishna</div></a>
                     <div class="member-affil">Director, NIT Calicut, India</div>
                 </div>
-                <div class="member-card">
-                    <div class="member-name">Prof. R. Balasubramanian</div>
+            </div>
+            <div class="member-card">
+                <img src="assets/images/R.jpg" alt="Prof. R. Balasubramanian" class="member-photo">
+                <div class="member-info">
+                    <a href="#" class="member-link"><div class="member-name">Prof. R. Balasubramanian</div></a>
                     <div class="member-affil">IIT Roorkee, India</div>
                 </div>
-                <div class="member-card">
-                    <div class="member-name">Prof. A. N. Rajagopalan</div>
+            </div>
+            <div class="member-card">
+                <img src="assets/images/A.jpg" alt="Prof. A. N. Rajagopalan" class="member-photo">
+                <div class="member-info">
+                    <a href="#" class="member-link"><div class="member-name">Prof. A. N. Rajagopalan</div></a>
                     <div class="member-affil">IIT Madras, India</div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="committee-group">
-            <h3 class="group-title">Conference Chairs</h3>
-            <div class="member-grid">
-                <div class="member-card">
-                    <div class="member-name">Prof. Kiran Raja</div>
+    <div class="committee-group">
+        <h3 class="group-title">Conference Chairs</h3>
+        <div class="member-grid">
+            <div class="member-card">
+                <img src="assets/images/Kiran.jpg" alt="Prof. Kiran Raja" class="member-photo">
+                <div class="member-info">
+                    <a href="#" class="member-link"><div class="member-name">Prof. Kiran Raja</div></a>
                     <div class="member-affil">NTNU, Norway</div>
                 </div>
-                <div class="member-card">
-                    <div class="member-name">Dr. Sudhish N. George</div>
+            </div>
+            <div class="member-card">
+                <img src="assets/images/Sudhish.jpg" alt="Dr. Sudhish N. George" class="member-photo">
+                <div class="member-info">
+                    <a href="#" class="member-link"><div class="member-name">Dr. Sudhish N. George</div></a>
                     <div class="member-affil">NIT Calicut, India</div>
                 </div>
-                <div class="member-card">
-                    <div class="member-name">Prof. Mohit Bansal</div>
+            </div>
+            <div class="member-card">
+                <img src="assets/images/Mohit.jpg" alt="Prof. Mohit Bansal" class="member-photo">
+                <div class="member-info">
+                    <a href="#" class="member-link"><div class="member-name">Prof. Mohit Bansal</div></a>
                     <div class="member-affil">University of North Carolina, USA</div>
                 </div>
-                <div class="member-card">
-                    <div class="member-name">Prof. Gaurav Bhatnagar</div>
+            </div>
+            <div class="member-card">
+                <img src="assets/images/Gaurav.jpg" alt="Prof. Gaurav Bhatnagar" class="member-photo">
+                <div class="member-info">
+                    <a href="#" class="member-link"><div class="member-name">Prof. Gaurav Bhatnagar</div></a>
                     <div class="member-affil">IIT Jodhpur, India</div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="committee-group">
-            <h3 class="group-title">Conference Co-Chairs</h3>
-            <div class="member-grid">
-                <div class="member-card">
-                    <div class="member-name">Prof. Aparajita Ojha</div>
+    <div class="committee-group">
+        <h3 class="group-title">Conference Co-Chairs</h3>
+        <div class="member-grid">
+            <div class="member-card">
+                <img src="assets/images/Aparajita.jpg" alt="Prof. Aparajita Ojha" class="member-photo">
+                <div class="member-info">
+                    <a href="#" class="member-link"><div class="member-name">Prof. Aparajita Ojha</div></a>
                     <div class="member-affil">IIITDM Jabalpur, India</div>
                 </div>
-                <div class="member-card">
-                    <div class="member-name">Dr. Puneet Goyal</div>
+            </div>
+            <div class="member-card">
+                <img src="assets/images/Puneet.jpg" alt="Dr. Puneet Goyal" class="member-photo">
+                <div class="member-info">
+                    <a href="#" class="member-link"><div class="member-name">Dr. Puneet Goyal</div></a>
                     <div class="member-affil">IIT Ropar, India</div>
                 </div>
-                <div class="member-card">
-                    <div class="member-name">Dr. Santosh Kumar Vipparthi</div>
+            </div>
+            <div class="member-card">
+                <img src="assets/images/Santosh.jpg" alt="Dr. Santosh Kumar Vipparthi" class="member-photo">
+                <div class="member-info">
+                    <a href="#" class="member-link"><div class="member-name">Dr. Santosh Kumar Vipparthi</div></a>
                     <div class="member-affil">IIT Ropar, India</div>
                 </div>
-                <div class="member-card">
-                    <div class="member-name">Dr. Jagadeesh Kakarla</div>
+            </div>
+            <div class="member-card">
+                <img src="assets/images/Jagadeesh.jpg" alt="Dr. Jagadeesh Kakarla" class="member-photo">
+                <div class="member-info">
+                    <a href="#" class="member-link"><div class="member-name">Dr. Jagadeesh Kakarla</div></a>
                     <div class="member-affil">IIITDM Kancheepuram, India</div>
                 </div>
-                <div class="member-card">
-                    <div class="member-name">Dr. Pournami P. N.</div>
+            </div>
+            <div class="member-card">
+                <img src="assets/images/Pournami.jpg" alt="Dr. Pournami P. N." class="member-photo">
+                <div class="member-info">
+                    <a href="#" class="member-link"><div class="member-name">Dr. Pournami P. N.</div></a>
                     <div class="member-affil">NIT Calicut, India</div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="committee-group">
-            <h3 class="group-title">Convenors</h3>
-            <div class="member-grid">
-                <div class="member-card">
-                    <div class="member-name">Dr. Deep Gupta</div>
+    <div class="committee-group">
+        <h3 class="group-title">Convenors</h3>
+        <div class="member-grid">
+            <div class="member-card">
+                <img src="assets/images/Deep.jpg" alt="Dr. Deep Gupta" class="member-photo">
+                <div class="member-info">
+                    <a href="#" class="member-link"><div class="member-name">Dr. Deep Gupta</div></a>
                     <div class="member-affil">VNIT Nagpur, India</div>
                 </div>
-                <div class="member-card">
-                    <div class="member-name">Dr. Shiv Ram Dubey</div>
+            </div>
+            <div class="member-card">
+                <img src="assets/images/Shiv.jpg" alt="Dr. Shiv Ram Dubey" class="member-photo">
+                <div class="member-info">
+                    <a href="#" class="member-link"><div class="member-name">Dr. Shiv Ram Dubey</div></a>
                     <div class="member-affil">IIIT Allahabad, India</div>
                 </div>
-                <div class="member-card">
-                    <div class="member-name">Prof. Sony George</div>
+            </div>
+            <div class="member-card">
+                <img src="assets/images/Sony.jpg" alt="Prof. Sony George" class="member-photo">
+                <div class="member-info">
+                    <a href="#" class="member-link"><div class="member-name">Prof. Sony George</div></a>
                     <div class="member-affil">NTNU, Norway</div>
                 </div>
-                <div class="member-card">
-                    <div class="member-name">Dr. Gopi Krishna Saramekala</div>
+            </div>
+            <div class="member-card">
+                <img src="assets/images/Gopi.jpg" alt="Dr. Gopi Krishna Saramekala" class="member-photo">
+                <div class="member-info">
+                    <a href="#" class="member-link"><div class="member-name">Dr. Gopi Krishna Saramekala</div></a>
                     <div class="member-affil">NIT Calicut, India</div>
                 </div>
             </div>
         </div>
-
-        <div class="committee-group">
-            <h3 class="group-title">Sponsorship Chairs</h3>
-            <div class="member-grid">
-                <div class="member-card">
-                    <div class="member-name">Prof. Praveen Sankaran</div>
-                    <div class="member-affil">NIT Calicut, India</div>
-                </div>
-            </div>
-        </div>
-
-        <div class="committee-group">
-            <h3 class="group-title">Program Chairs</h3>
-            <div class="member-grid">
-                <div class="member-card"><div class="member-name">Dr. Sudipta Banerjee</div><div class="member-affil">The University of Wyoming, USA</div></div>
-                <div class="member-card"><div class="member-name">Prof. Chiara Galdi</div><div class="member-affil">Eurecom, France</div></div>
-                <div class="member-card"><div class="member-name">Prof. Marta Gomez-Barrero</div><div class="member-affil">Universität der Bundeswehr München</div></div>
-                <div class="member-card"><div class="member-name">Dr. Abhinav Kumar</div><div class="member-affil">IIT Ropar, India</div></div>
-                <div class="member-card"><div class="member-name">Dr. Shihabudheen K. V.</div><div class="member-affil">NIT Calicut, India</div></div>
-                <div class="member-card"><div class="member-name">Prof. Rama Krishna Sai Gorthi</div><div class="member-affil">IIT Tirupati, India</div></div>
-            </div>
-        </div>
-
-        <div class="committee-group">
-            <h3 class="group-title">Publicity Chairs</h3>
-            <div class="member-grid">
-                <div class="member-card"><div class="member-name">Dr. Aditya Sole</div><div class="member-affil">NTNU, Norway</div></div>
-                <div class="member-card"><div class="member-name">Dr. Amitesh Rajput</div><div class="member-affil">NLIU, Bhopal, India</div></div>
-                <div class="member-card"><div class="member-name">Dr. P. Prakash</div><div class="member-affil">MIT Anna University, India</div></div>
-                <div class="member-card"><div class="member-name">Dr. Sanjay Viswanath</div><div class="member-affil">NIT Calicut, India</div></div>
-                <div class="member-card"><div class="member-name">Dr. Manisha Verma</div><div class="member-affil">IIT (ISM) Dhanbad, India</div></div>
-                <div class="member-card"><div class="member-name">Dr. Sandeep Gupta</div><div class="member-affil">Queen's University Belfast, U.K.</div></div>
-            </div>
-        </div>
-
-        <div class="committee-group">
-            <h3 class="group-title">Local Organizing Chairs</h3>
-            <div class="member-grid">
-                <div class="member-card"><div class="member-name">Dr. Lintu Rajan</div><div class="member-affil">NIT Calicut, India</div></div>
-                <div class="member-card"><div class="member-name">Dr. C. Periyasamy</div><div class="member-affil">NIT Calicut, India</div></div>
-                <div class="member-card"><div class="member-name">Dr. C. N. Shyam Kumar</div><div class="member-affil">NIT Calicut, India</div></div>
-                <div class="member-card"><div class="member-name">Dr. Rahul Radhakrishnan</div><div class="member-affil">NIT Calicut, India</div></div>
-                <div class="member-card"><div class="member-name">Dr. Jagadeesh V. K.</div><div class="member-affil">NIT Calicut, India</div></div>
-            </div>
-        </div>
-
-        <div class="committee-group">
-            <h3 class="group-title">Publication Chairs</h3>
-            <div class="member-grid">
-                <div class="member-card"><div class="member-name">Dr. Ameer P. M.</div><div class="member-affil">NIT Calicut, India</div></div>
-                <div class="member-card"><div class="member-name">Dr. Jayakumar E. P.</div><div class="member-affil">NIT Calicut, India</div></div>
-            </div>
-        </div>
-
-        <div class="committee-group">
-            <h3 class="group-title">Tutorial and Workshop Chairs</h3>
-            <div class="member-grid">
-                <div class="member-card"><div class="member-name">Dr. Rahul Prasannakumar</div><div class="member-affil">Oslo University Hospital, Norway</div></div>
-                <div class="member-card"><div class="member-name">Dr. Bindiya T. S.</div><div class="member-affil">NIT Calicut, India</div></div>
-                <div class="member-card"><div class="member-name">Prof. Prakash Nair</div><div class="member-affil">Sree Chitra Tirunal Institute, India</div></div>
-            </div>
-        </div>
-
+    </div>
+    
     </div>
 </section>
 
@@ -253,6 +245,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
