--- a/committee.html
+++ b/committee.html
@@ -74,7 +74,7 @@
         <h3 class="group-title">Patron</h3>
         <div class="member-grid">
             <div class="member-card">
-                <img src="assets/images/B.jpg" alt="Prof. B. B. Chaudhuri" class="member-photo">
+                <img src="assets/images/B. B. Chaudhuri.jpg" alt="Prof. B. B. Chaudhuri" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link"><div class="member-name">Prof. B. B. Chaudhuri</div></a>
                     <div class="member-affil">Indian Statistical Institute (ISI), Kolkata, India</div>
@@ -245,6 +245,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
