--- a/committee.html
+++ b/committee.html
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/R.jpg" alt="Prof. R. Balasubramanian" class="member-photo">
+                <img src="assets/images/Balasubramanian.jpg" alt="Prof. R. Balasubramanian" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link"><div class="member-name">Prof. R. Balasubramanian</div></a>
                     <div class="member-affil">IIT Roorkee, India</div>
@@ -245,6 +245,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
