--- a/committee.html
+++ b/committee.html
@@ -223,7 +223,7 @@
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/Gopi.jpg" alt="Dr. Gopi Krishna Saramekala" class="member-photo">
+                <img src="assets/images/GopiKrishna.jpg" alt="Dr. Gopi Krishna Saramekala" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link"><div class="member-name">Dr. Gopi Krishna Saramekala</div></a>
                     <div class="member-affil">NIT Calicut, India</div>
@@ -245,6 +245,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
