--- a/committee.html
+++ b/committee.html
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/A.jpg" alt="Prof. A. N. Rajagopalan" class="member-photo">
+                <img src="assets/images/rajagopalan-an.jpg" alt="Prof. A. N. Rajagopalan" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link"><div class="member-name">Prof. A. N. Rajagopalan</div></a>
                     <div class="member-affil">IIT Madras, India</div>
@@ -245,6 +245,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
