--- a/committee.html
+++ b/committee.html
@@ -141,7 +141,7 @@
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/Mohit.jpg" alt="Prof. Mohit Bansal" class="member-photo">
+                <img src="assets/images/mohitbansal.jpg" alt="Prof. Mohit Bansal" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link"><div class="member-name">Prof. Mohit Bansal</div></a>
                     <div class="member-affil">University of North Carolina, USA</div>
@@ -245,6 +245,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
