--- a/committee.html
+++ b/committee.html
@@ -87,7 +87,7 @@
         <h3 class="group-title">Honorary General Chair</h3>
         <div class="member-grid">
             <div class="member-card">
-                <img src="assets/images/Anil.jpg" alt="Prof. Anil K Jain" class="member-photo">
+                <img src="assets/images/AnilKJain.jpg" alt="Prof. Anil K Jain" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link"><div class="member-name">Prof. Anil K Jain</div></a>
                     <div class="member-affil">Michigan State University, USA</div>
@@ -245,6 +245,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
