--- a/committee.html
+++ b/committee.html
@@ -235,7 +235,7 @@
         <h3 class="group-title">Sponsorship Chairs</h3>
         <div class="member-grid">
             <div class="member-card">
-                <img src="assets/images/Praveen.jpg" alt="Prof. Praveen Sankaran" class="member-photo">
+                <img src="assets/images/PraveenSankaran.jpg" alt="Prof. Praveen Sankaran" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link"><div class="member-name">Prof. Praveen Sankaran</div></a>
                     <div class="member-affil">NIT Calicut, India </div>
@@ -524,4 +524,5 @@
 </footer>
 </body>
 </html>
+
 
