--- a/committee.html
+++ b/committee.html
@@ -387,7 +387,7 @@
             <div class="member-card">
                 <img src="assets/images/Ameer.jpg" alt="Dr. Ameer P. M." class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Ameer P. M.</div></a>
+                    <a href="https://nitc.ac.in/department/electronics-amp-communication-engineering/faculty-and-staff/faculty/88224dda-7e19-4551-8d10-546e26584cf4" class="member-link"><div class="member-name">Dr. Ameer P. M.</div></a>
                     <div class="member-affil">NIT Calicut, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
