--- a/committee.html
+++ b/committee.html
@@ -405,7 +405,7 @@
         <h3 class="group-title">Tutorial and Workshop Chairs</h3>
         <div class="member-grid">
             <div class="member-card">
-                <img src="assets/images/Rahul_P.jpg" alt="Dr. Rahul Prasannakumar" class="member-photo">
+                <img src="assets/images/Rahul.jpg" alt="Dr. Rahul Prasannakumar" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link"><div class="member-name">Dr. Rahul Prasannakumar</div></a>
                     <div class="member-affil">Oslo University Hospital (OUH), Norway </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
