--- a/committee.html
+++ b/committee.html
@@ -310,7 +310,7 @@
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/Prakash_P.jpg" alt="Dr. P. Prakash" class="member-photo">
+                <img src="assets/images/Prakash.jpg" alt="Dr. P. Prakash" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link"><div class="member-name">Dr. P. Prakash</div></a>
                     <div class="member-affil">MIT Anna University, Chennai, India </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
