--- a/committee.html
+++ b/committee.html
@@ -331,7 +331,7 @@
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/Sandeep.jpg" alt="Dr. Sandeep Gupta" class="member-photo">
+                <img src="assets/images/SandeepGupta.jpg" alt="Dr. Sandeep Gupta" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link"><div class="member-name">Dr. Sandeep Gupta</div></a>
                     <div class="member-affil">Queen's University Belfast, U.K. </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
