--- a/committee.html
+++ b/committee.html
@@ -488,7 +488,7 @@
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/Ishwara.jpg" alt="Dr. A. Ishwara Bhat" class="member-photo">
+                <img src="assets/images/IshwaraBhat.jpg" alt="Dr. A. Ishwara Bhat" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link"><div class="member-name">Dr. A. Ishwara Bhat</div></a>
                     <div class="member-affil">ICAR - IISR, Kozhikode, India </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
