--- a/committee.html
+++ b/committee.html
@@ -101,7 +101,7 @@
             <div class="member-card">
                 <img src="assets/images/Prasad.jpg" alt="Prof. Prasad Krishna" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Prof. Prasad Krishna</div></a>
+                    <a href="https://nitc.ac.in/director" class="member-link"><div class="member-name">Prof. Prasad Krishna</div></a>
                     <div class="member-affil">Director, NIT Calicut, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
