--- a/committee.html
+++ b/committee.html
@@ -135,7 +135,7 @@
             <div class="member-card">
                 <img src="assets/images/Sudhish.jpg" alt="Dr. Sudhish N. George" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Sudhish N. George</div></a>
+                    <a href="https://nitc.ac.in/department/electronics-amp-communication-engineering/faculty-and-staff/faculty/77700704-50b0-42cd-965b-38dd5b7171cf" class="member-link"><div class="member-name">Dr. Sudhish N. George</div></a>
                     <div class="member-affil">NIT Calicut, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
