--- a/committee.html
+++ b/committee.html
@@ -190,7 +190,7 @@
             <div class="member-card">
                 <img src="assets/images/Pournami.jpg" alt="Dr. Pournami P. N." class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Pournami P. N.</div></a>
+                    <a href="https://nitc.ac.in/department/computer-science-amp-engineering/faculty-and-staff/faculty/f7eef9f3-8a95-40bf-b68e-24b737caec00" class="member-link"><div class="member-name">Dr. Pournami P. N.</div></a>
                     <div class="member-affil">NIT Calicut, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
