--- a/committee.html
+++ b/committee.html
@@ -224,7 +224,7 @@
             <div class="member-card">
                 <img src="assets/images/GopiKrishna.jpg" alt="Dr. Gopi Krishna Saramekala" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Gopi Krishna Saramekala</div></a>
+                    <a href="https://nitc.ac.in/department/electronics-amp-communication-engineering/faculty-and-staff/faculty/a2a51793-1032-44b0-8445-3569d7cfdbb3" class="member-link"><div class="member-name">Dr. Gopi Krishna Saramekala</div></a>
                     <div class="member-affil">NIT Calicut, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
