--- a/committee.html
+++ b/committee.html
@@ -237,7 +237,7 @@
             <div class="member-card">
                 <img src="assets/images/PraveenSankaran.jpg" alt="Prof. Praveen Sankaran" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Prof. Praveen Sankaran</div></a>
+                    <a href="https://nitc.ac.in/department/electronics-amp-communication-engineering/faculty-and-staff/faculty/2c3f1028-76d0-4843-af96-b38861ebe554" class="member-link"><div class="member-name">Prof. Praveen Sankaran</div></a>
                     <div class="member-affil">NIT Calicut, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
