--- a/committee.html
+++ b/committee.html
@@ -278,7 +278,7 @@
             <div class="member-card">
                 <img src="assets/images/Shihabudheen.jpg" alt="Dr. Shihabudheen K. V." class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Shihabudheen K. V.</div></a>
+                    <a href="https://nitc.ac.in/department/electrical-engineering/faculty-and-staff/faculty/f3b879d8-9c5b-4a63-9f0d-3a7b5511b3d9" class="member-link"><div class="member-name">Dr. Shihabudheen K. V.</div></a>
                     <div class="member-affil">NIT Calicut, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
