--- a/committee.html
+++ b/committee.html
@@ -346,7 +346,7 @@
             <div class="member-card">
                 <img src="assets/images/Lintu .jpg" alt="Dr. Lintu Rajan" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Lintu Rajan</div></a>
+                    <a href="https://nitc.ac.in/department/electronics-amp-communication-engineering/faculty-and-staff/faculty/926c63fb-5f16-4deb-a771-9b7893cc291a" class="member-link"><div class="member-name">Dr. Lintu Rajan</div></a>
                     <div class="member-affil">NIT Calicut, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
