--- a/committee.html
+++ b/committee.html
@@ -353,7 +353,7 @@
             <div class="member-card">
                 <img src="assets/images/Periyasamy .jpg" alt="Dr. C. Periyasamy" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. C. Periyasamy</div></a>
+                    <a href="https://nitc.ac.in/thematic-centres/campus-networking-centre-cnc/faculty-and-staff/faculty/c93a0ff2-38a4-4df7-acb5-9645c8c4a26a" class="member-link"><div class="member-name">Dr. C. Periyasamy</div></a>
                     <div class="member-affil">NIT Calicut, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
