--- a/committee.html
+++ b/committee.html
@@ -360,7 +360,7 @@
             <div class="member-card">
                 <img src="assets/images/Shyam.jpg" alt="Dr. C. N. Shyam Kumar" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. C. N. Shyam Kumar</div></a>
+                    <a href="https://nitc.ac.in/multidiscilplinary-centres/centre-for-continuing-education-and-skill-development/faculty-and-staff/faculty/4c0a5403-3c68-4a4e-9180-1207922eabbe" class="member-link"><div class="member-name">Dr. C. N. Shyam Kumar</div></a>
                     <div class="member-affil">NIT Calicut, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
