--- a/committee.html
+++ b/committee.html
@@ -367,7 +367,7 @@
             <div class="member-card">
                 <img src="assets/images/RahulRadhakrishnan .jpg" alt="Dr. Rahul Radhakrishnan" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Rahul Radhakrishnan</div></a>
+                    <a href="https://nitc.ac.in/department/electrical-engineering/faculty-and-staff/faculty/6578e531-4695-4656-beb4-6ae6fb52695e" class="member-link"><div class="member-name">Dr. Rahul Radhakrishnan</div></a>
                     <div class="member-affil">NIT Calicut, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
