--- a/committee.html
+++ b/committee.html
@@ -394,7 +394,7 @@
             <div class="member-card">
                 <img src="assets/images/Jayakumar.jpg" alt="Dr. Jayakumar E. P." class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Jayakumar E. P.</div></a>
+                    <a href="https://nitc.ac.in/department/electronics-amp-communication-engineering/faculty-and-staff/faculty/6e4d6149-9b13-43eb-9095-1026b56d7eb4" class="member-link"><div class="member-name">Dr. Jayakumar E. P.</div></a>
                     <div class="member-affil">NIT Calicut, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
