--- a/committee.html
+++ b/committee.html
@@ -75,7 +75,7 @@
             <div class="member-card">
                 <img src="assets/images/B. B. Chaudhuri.jpg" alt="Prof. B. B. Chaudhuri" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Prof. B. B. Chaudhuri</div></a>
+                    <a href="https://www.isical.ac.in/~bbc/" class="member-link"><div class="member-name">Prof. B. B. Chaudhuri</div></a>
                     <div class="member-affil">Indian Statistical Institute (ISI), Kolkata, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
