--- a/committee.html
+++ b/committee.html
@@ -88,7 +88,7 @@
             <div class="member-card">
                 <img src="assets/images/AnilKJain.jpg" alt="Prof. Anil K Jain" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Prof. Anil K Jain</div></a>
+                    <a href="https://www.cse.msu.edu/~jain/" class="member-link"><div class="member-name">Prof. Anil K Jain</div></a>
                     <div class="member-affil">Michigan State University, USA </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
