--- a/committee.html
+++ b/committee.html
@@ -108,7 +108,7 @@
             <div class="member-card">
                 <img src="assets/images/Balasubramanian.jpg" alt="Prof. R. Balasubramanian" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Prof. R. Balasubramanian</div></a>
+                    <a href="https://www.iitr.ac.in/mvlab/people.html" class="member-link"><div class="member-name">Prof. R. Balasubramanian</div></a>
                     <div class="member-affil">IIT Roorkee, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
