--- a/committee.html
+++ b/committee.html
@@ -115,7 +115,7 @@
             <div class="member-card">
                 <img src="assets/images/rajagopalan-an.jpg" alt="Prof. A. N. Rajagopalan" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Prof. A. N. Rajagopalan</div></a>
+                    <a href="https://www.ee.iitm.ac.in/raju/#:~:text=He%20is%20a%20recipient%20of,award%20at%20the%2010th%20International" class="member-link"><div class="member-name">Prof. A. N. Rajagopalan</div></a>
                     <div class="member-affil">IIT Madras, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
