--- a/committee.html
+++ b/committee.html
@@ -128,7 +128,7 @@
             <div class="member-card">
                 <img src="assets/images/Kiran.jpg" alt="Prof. Kiran Raja" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Prof. Kiran Raja</div></a>
+                    <a href="https://www.ntnu.edu/employees/kiran.raja" class="member-link"><div class="member-name">Prof. Kiran Raja</div></a>
                     <div class="member-affil">NTNU, Norway </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
