--- a/committee.html
+++ b/committee.html
@@ -142,7 +142,7 @@
             <div class="member-card">
                 <img src="assets/images/mohitbansal.jpg" alt="Prof. Mohit Bansal" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Prof. Mohit Bansal</div></a>
+                    <a href="https://cs.unc.edu/person/mohit-bansal/" class="member-link"><div class="member-name">Prof. Mohit Bansal</div></a>
                     <div class="member-affil">University of North Carolina, USA </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
