--- a/committee.html
+++ b/committee.html
@@ -149,7 +149,7 @@
             <div class="member-card">
                 <img src="assets/images/Gaurav.jpg" alt="Prof. Gaurav Bhatnagar" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Prof. Gaurav Bhatnagar</div></a>
+                    <a href="https://iitj.ac.in/People/Profile/76c9e7c9-555e-4bb9-82b9-2f5a0ed9d11e" class="member-link"><div class="member-name">Prof. Gaurav Bhatnagar</div></a>
                     <div class="member-affil">IIT Jodhpur, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
