--- a/committee.html
+++ b/committee.html
@@ -162,7 +162,7 @@
             <div class="member-card">
                 <img src="assets/images/Aparajita.jpg" alt="Prof. Aparajita Ojha" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Prof. Aparajita Ojha</div></a>
+                    <a href="https://cse.iiitdmj.ac.in/faculty_page.php?id=aojha@iiitdmj.ac.in" class="member-link"><div class="member-name">Prof. Aparajita Ojha</div></a>
                     <div class="member-affil">IIITDM Jabalpur, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
