--- a/committee.html
+++ b/committee.html
@@ -169,7 +169,7 @@
             <div class="member-card">
                 <img src="assets/images/Puneet.jpg" alt="Dr. Puneet Goyal" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Puneet Goyal</div></a>
+                    <a href="https://sites.google.com/view/goyalpuneet" class="member-link"><div class="member-name">Dr. Puneet Goyal</div></a>
                     <div class="member-affil">IIT Ropar, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
