--- a/committee.html
+++ b/committee.html
@@ -176,7 +176,7 @@
             <div class="member-card">
                 <img src="assets/images/Santosh.jpg" alt="Dr. Santosh Kumar Vipparthi" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Santosh Kumar Vipparthi</div></a>
+                    <a href="https://www.iitrpr.ac.in/ee/profile.faculty.php?mail=skvipparthi%40iitrpr.ac.in" class="member-link"><div class="member-name">Dr. Santosh Kumar Vipparthi</div></a>
                     <div class="member-affil">IIT Ropar, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
