--- a/committee.html
+++ b/committee.html
@@ -183,7 +183,7 @@
             <div class="member-card">
                 <img src="assets/images/Jagadeesh.jpg" alt="Dr. Jagadeesh Kakarla" class="member-photo">
                 <div class="member-info">
-                    <a href="https://nitc.ac.in/department/electronics-amp-communication-engineering/faculty-and-staff/faculty/15a9a881-3871-4afb-a0ce-3dc7b2b0b66e" class="member-link"><div class="member-name">Dr. Jagadeesh Kakarla</div></a>
+                    <a href="https://www.iiitdm.ac.in/people/faculty/jagadeeshk@iiitdm.ac.in" class="member-link"><div class="member-name">Dr. Jagadeesh Kakarla</div></a>
                     <div class="member-affil">IIITDM Kancheepuram, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
