--- a/committee.html
+++ b/committee.html
@@ -203,7 +203,7 @@
             <div class="member-card">
                 <img src="assets/images/Deep.jpg" alt="Dr. Deep Gupta" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Deep Gupta</div></a>
+                    <a href="https://vnit.ac.in/engineering/ece/dr-deep-gupta/" class="member-link"><div class="member-name">Dr. Deep Gupta</div></a>
                     <div class="member-affil">VNIT Nagpur, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
