--- a/committee.html
+++ b/committee.html
@@ -210,7 +210,7 @@
             <div class="member-card">
                 <img src="assets/images/Shiv.jpg" alt="Dr. Shiv Ram Dubey" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Shiv Ram Dubey</div></a>
+                    <a href="https://it.iiita.ac.in/?pg=facultypage&uid=srdubey" class="member-link"><div class="member-name">Dr. Shiv Ram Dubey</div></a>
                     <div class="member-affil">IIIT Allahabad, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
