--- a/committee.html
+++ b/committee.html
@@ -217,7 +217,7 @@
             <div class="member-card">
                 <img src="assets/images/Sony.jpg" alt="Prof. Sony George" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Prof. Sony George</div></a>
+                    <a href="https://www.ntnu.edu/employees/sony.george" class="member-link"><div class="member-name">Prof. Sony George</div></a>
                     <div class="member-affil">NTNU, Norway </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
