--- a/committee.html
+++ b/committee.html
@@ -250,7 +250,7 @@
             <div class="member-card">
                 <img src="assets/images/Sudipta.jpg" alt="Dr. Sudipta Banerjee" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Sudipta Banerjee</div></a>
+                    <a href="https://www.uwyo.edu/eecs/faculty-staff/faculty/sudipta-banerjee.html" class="member-link"><div class="member-name">Dr. Sudipta Banerjee</div></a>
                     <div class="member-affil">The University of Wyoming, USA </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
