--- a/committee.html
+++ b/committee.html
@@ -257,7 +257,7 @@
             <div class="member-card">
                 <img src="assets/images/Chiara.jpg" alt="Prof. Chiara Galdi" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Prof. Chiara Galdi</div></a>
+                    <a href="https://www.eurecom.fr/en/people/galdi-chiara" class="member-link"><div class="member-name">Prof. Chiara Galdi</div></a>
                     <div class="member-affil">Eurecom, France </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
