--- a/committee.html
+++ b/committee.html
@@ -264,7 +264,7 @@
             <div class="member-card">
                 <img src="assets/images/Marta.jpg" alt="Prof. Marta Gomez-Barrero" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Prof. Marta Gomez-Barrero</div></a>
+                    <a href="https://www.unibw.de/bioml-en/team/univ-prof-in-dr-marta-gomez-barrero" class="member-link"><div class="member-name">Prof. Marta Gomez-Barrero</div></a>
                     <div class="member-affil">Universität der Bundeswehr München, Germany </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
