--- a/committee.html
+++ b/committee.html
@@ -271,7 +271,7 @@
             <div class="member-card">
                 <img src="assets/images/Abhinav.jpg" alt="Dr. Abhinav Kumar" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Abhinav Kumar</div></a>
+                    <a href="https://www.iitrpr.ac.in/saide/profile.faculty.php?mail=abhinavk%40iitrpr.ac.in" class="member-link"><div class="member-name">Dr. Abhinav Kumar</div></a>
                     <div class="member-affil">IIT Ropar, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
