--- a/committee.html
+++ b/committee.html
@@ -285,7 +285,7 @@
             <div class="member-card">
                 <img src="assets/images/Rama.jpg" alt="Prof. Rama Krishna Sai Gorthi" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Prof. Rama Krishna Sai Gorthi</div></a>
+                    <a href="https://ee.iittp.ac.in/Faculty_Rkg.html" class="member-link"><div class="member-name">Prof. Rama Krishna Sai Gorthi</div></a>
                     <div class="member-affil">IIT Tirupati, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
