--- a/committee.html
+++ b/committee.html
@@ -298,7 +298,7 @@
             <div class="member-card">
                 <img src="assets/images/Aditya.jpg" alt="Dr. Aditya Sole" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Aditya Sole</div></a>
+                    <a href="https://www.ntnu.edu/employees/aditya.sole" class="member-link"><div class="member-name">Dr. Aditya Sole</div></a>
                     <div class="member-affil">NTNU, Norway </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
