--- a/committee.html
+++ b/committee.html
@@ -305,7 +305,7 @@
             <div class="member-card">
                 <img src="assets/images/Amitesh.jpg" alt="Dr. Amitesh Rajput" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Amitesh Rajput</div></a>
+                    <a href="https://nliu.ac.in/dr-amitesh-singh-rajput/" class="member-link"><div class="member-name">Dr. Amitesh Rajput</div></a>
                     <div class="member-affil">NLIU, Bhopal, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
