--- a/committee.html
+++ b/committee.html
@@ -312,7 +312,7 @@
             <div class="member-card">
                 <img src="assets/images/PrakashP.jpg" alt="Dr. P. Prakash" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. P. Prakash</div></a>
+                    <a href="https://annauniv.irins.org/profile/117838" class="member-link"><div class="member-name">Dr. P. Prakash</div></a>
                     <div class="member-affil">MIT Anna University, Chennai, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
