--- a/committee.html
+++ b/committee.html
@@ -319,7 +319,7 @@
             <div class="member-card">
                 <img src="assets/images/Sanjay.jpg" alt="Dr. Sanjay Viswanath" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Sanjay Viswanath</div></a>
+                    <a href="https://nitc.ac.in/department/electronics-amp-communication-engineering/faculty-and-staff/faculty/4dcaf3ed-3000-49fc-b2c2-47d13a330dce" class="member-link"><div class="member-name">Dr. Sanjay Viswanath</div></a>
                     <div class="member-affil">NIT Calicut, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
