--- a/committee.html
+++ b/committee.html
@@ -326,7 +326,7 @@
             <div class="member-card">
                 <img src="assets/images/Manisha.jpg" alt="Dr. Manisha Verma" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Manisha Verma</div></a>
+                    <a href="https://www.iitism.ac.in/faculty-details?faculty=manisha" class="member-link"><div class="member-name">Dr. Manisha Verma</div></a>
                     <div class="member-affil">IIT (ISM) Dhanbad, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
