--- a/committee.html
+++ b/committee.html
@@ -333,7 +333,7 @@
             <div class="member-card">
                 <img src="assets/images/SandeepGupta.jpg" alt="Dr. Sandeep Gupta" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Sandeep Gupta</div></a>
+                    <a href="https://pure.qub.ac.uk/en/persons/sandeep-gupta/" class="member-link"><div class="member-name">Dr. Sandeep Gupta</div></a>
                     <div class="member-affil">Queen's University Belfast, U.K. </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
