--- a/committee.html
+++ b/committee.html
@@ -374,7 +374,7 @@
             <div class="member-card">
                 <img src="assets/images/JagadeeshVK.jpg" alt="Dr. Jagadeesh V. K." class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Jagadeesh V. K.</div></a>
+                    <a href="https://nitc.ac.in/department/electronics-amp-communication-engineering/faculty-and-staff/faculty/15a9a881-3871-4afb-a0ce-3dc7b2b0b66e" class="member-link"><div class="member-name">Dr. Jagadeesh V. K.</div></a>
                     <div class="member-affil">NIT Calicut, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
