--- a/committee.html
+++ b/committee.html
@@ -407,7 +407,7 @@
             <div class="member-card">
                 <img src="assets/images/Rahul.jpg" alt="Dr. Rahul Prasannakumar" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Rahul Prasannakumar</div></a>
+                    <a href="https://scholar.google.pt/citations?user=YbDnCfwAAAAJ&hl=pt-PT" class="member-link"><div class="member-name">Dr. Rahul Prasannakumar</div></a>
                     <div class="member-affil">Oslo University Hospital (OUH), Norway </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
