--- a/committee.html
+++ b/committee.html
@@ -421,7 +421,7 @@
             <div class="member-card">
                 <img src="assets/images/PrakashNair.jpg" alt="Prof. Prakash Nair" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Prof. Prakash Nair</div></a>
+                    <a href="https://sctimst.ac.in/People/prakashnair" class="member-link"><div class="member-name">Prof. Prakash Nair</div></a>
                     <div class="member-affil">SCTIMST, Thiruvananthapuram, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
