--- a/committee.html
+++ b/committee.html
@@ -448,7 +448,7 @@
             <div class="member-card">
                 <img src="assets/images/Prashant.jpg" alt="Dr. Prashant Patil" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Prashant Patil</div></a>
+                    <a href="https://iitg.ac.in/iitg_faculty_details?fac=emE0eXp4VEpTLy9CSmVJeVo0TmRxUT09" class="member-link"><div class="member-name">Dr. Prashant Patil</div></a>
                     <div class="member-affil">IIT Guwahati, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
