--- a/committee.html
+++ b/committee.html
@@ -455,7 +455,7 @@
             <div class="member-card">
                 <img src="assets/images/Pushpendra.jpg" alt="Dr. Pushpendra Kumar" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Pushpendra Kumar</div></a>
+                    <a href="https://www.manit.ac.in/content/dr-pushpendra-kumar" class="member-link"><div class="member-name">Dr. Pushpendra Kumar</div></a>
                     <div class="member-affil">MANIT Bhopal, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
