--- a/committee.html
+++ b/committee.html
@@ -469,7 +469,7 @@
             <div class="member-card">
                 <img src="assets/images/Harkeerat.jpg" alt="Dr. Harkeerat Kaur" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. Harkeerat Kaur</div></a>
+                    <a href="https://iitjammu.ac.in/computer_science_engineering/faculty-list/~harkeeratkaur" class="member-link"><div class="member-name">Dr. Harkeerat Kaur</div></a>
                     <div class="member-affil">IIT Jammu, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
