--- a/committee.html
+++ b/committee.html
@@ -476,7 +476,7 @@
             <div class="member-card">
                 <img src="assets/images/Kesavadas.jpg" alt="Dr. C. Kesavadas" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. C. Kesavadas</div></a>
+                    <a href="https://www.sctimst.ac.in/people/kesav" class="member-link"><div class="member-name">Dr. C. Kesavadas</div></a>
                     <div class="member-affil">SCTIMST, Thiruvananthapuram, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
