--- a/committee.html
+++ b/committee.html
@@ -483,7 +483,7 @@
             <div class="member-card">
                 <img src="assets/images/Senthil.jpg" alt="Dr. C. M. Senthil Kumar" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. C. M. Senthil Kumar</div></a>
+                    <a href="https://spices.res.in/staff/detail/dr-c-m-senthil-kumar" class="member-link"><div class="member-name">Dr. C. M. Senthil Kumar</div></a>
                     <div class="member-affil">ICAR - IISR, Kozhikode, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
