--- a/committee.html
+++ b/committee.html
@@ -490,7 +490,7 @@
             <div class="member-card">
                 <img src="assets/images/IshwaraBhat.jpg" alt="Dr. A. Ishwara Bhat" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link"><div class="member-name">Dr. A. Ishwara Bhat</div></a>
+                    <a href="https://spices.res.in/staff/detail/dr-a-ishwara-bhat" class="member-link"><div class="member-name">Dr. A. Ishwara Bhat</div></a>
                     <div class="member-affil">ICAR - IISR, Kozhikode, India </div>
                 </div>
             </div>
@@ -524,6 +524,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
