--- a/steering-committee.html
+++ b/steering-committee.html
@@ -76,7 +76,7 @@
                 <div class="member-card">
                     <img src="assets/images/umapada.jpg" alt="Prof. Umapada Pal" class="member-photo">
                     <div class="member-info">
-                        <a href="#" class="member-link"><div class="member-name">Prof. Umapada Pal</div></a>
+                        <a href="https://www.isical.ac.in/~umapada/index.php" class="member-link"><div class="member-name">Prof. Umapada Pal</div></a>
                         <div class="member-affil">Indian Statistical Institute (ISI), Kolkata, India</div>
                     </div>
                 </div>
