--- a/steering-committee.html
+++ b/steering-committee.html
@@ -84,7 +84,7 @@
                 <div class="member-card">
                     <img src="assets/images/balasubramanian.jpg" alt="Prof. R. Balasubramanian" class="member-photo">
                     <div class="member-info">
-                        <a href="#" class="member-link"><div class="member-name">Prof. R. Balasubramanian</div></a>
+                        <a href="https://faculty.iitr.ac.in/~balarfma/" class="member-link"><div class="member-name">Prof. R. Balasubramanian</div></a>
                         <div class="member-affil">Indian Institute of Technology (IIT) Roorkee, India</div>
                     </div>
                 </div>
