--- a/steering-committee.html
+++ b/steering-committee.html
@@ -92,7 +92,7 @@
                 <div class="member-card">
                     <img src="assets/images/ananda.jpg" alt="Prof. Ananda Chowdhury" class="member-photo">
                     <div class="member-info">
-                        <a href="#" class="member-link"><div class="member-name">Prof. Ananda Chowdhury</div></a>
+                        <a href="https://jadavpuruniversity.in/faculty-profile/ananda-shankar-chowdhury/" class="member-link"><div class="member-name">Prof. Ananda Chowdhury</div></a>
                         <div class="member-affil">Jadavpur University, India</div>
                     </div>
                 </div>
