--- a/steering-committee.html
+++ b/steering-committee.html
@@ -100,7 +100,7 @@
                 <div class="member-card">
                     <img src="assets/images/deepak.jpg" alt="Prof. Deepak Mishra" class="member-photo">
                     <div class="member-info">
-                        <a href="#" class="member-link"><div class="member-name">Prof. Deepak Mishra</div></a>
+                        <a href="https://www.iist.ac.in/people-faculty-profile/deepak-mishra" class="member-link"><div class="member-name">Prof. Deepak Mishra</div></a>
                         <div class="member-affil">Indian Institute of Space Science and Technology (IIST), Thiruvananthapuram, India</div>
                     </div>
                 </div>
