--- a/steering-committee.html
+++ b/steering-committee.html
@@ -108,7 +108,7 @@
                 <div class="member-card">
                     <img src="assets/images/pritee.jpg" alt="Prof. Pritee Khanna" class="member-photo">
                     <div class="member-info">
-                        <a href="#" class="member-link"><div class="member-name">Prof. Pritee Khanna</div></a>
+                        <a href="https://cse.iiitdmj.ac.in/faculty_page.php?id=pkhanna@iiitdmj.ac.in" class="member-link"><div class="member-name">Prof. Pritee Khanna</div></a>
                         <div class="member-affil">IIITDM Jabalpur, India</div>
                     </div>
                 </div>
