--- a/steering-committee.html
+++ b/steering-committee.html
@@ -116,7 +116,7 @@
                 <div class="member-card">
                     <img src="assets/images/Subrahmanyam.jpg" alt="Dr. Subrahmanyam Murala" class="member-photo">
                     <div class="member-info">
-                        <a href="#" class="member-link"><div class="member-name">Dr. Subrahmanyam Murala</div></a>
+                        <a href="https://www.tcd.ie/scss/people/academic-staff/muralas/" class="member-link"><div class="member-name">Dr. Subrahmanyam Murala</div></a>
                         <div class="member-affil">Trinity College Dublin, Ireland</div>
                     </div>
                 </div>
