--- a/steering-committee.html
+++ b/steering-committee.html
@@ -132,7 +132,7 @@
                 <div class="member-card">
                     <img src="assets/images/sanjeev.jpg" alt="Prof. Sanjeev Kumar" class="member-photo">
                     <div class="member-info">
-                        <a href="#" class="member-link"><div class="member-name">Prof. Sanjeev Kumar</div></a>
+                        <a href="https://www.iitr.ac.in/~MA/Malikfma" class="member-link"><div class="member-name">Prof. Sanjeev Kumar</div></a>
                         <div class="member-affil">Indian Institute of Technology (IIT) Roorkee, India</div>
                     </div>
                 </div>
