--- a/steering-committee.html
+++ b/steering-committee.html
@@ -124,7 +124,7 @@
                 <div class="member-card">
                     <img src="assets/images/puneet.jpg" alt="Dr. Puneet Goyal" class="member-photo">
                     <div class="member-info">
-                        <a href="#" class="member-link"><div class="member-name">Dr. Puneet Goyal</div></a>
+                        <a href="https://cse.iitrpr.ac.in/?page_id=75" class="member-link"><div class="member-name">Dr. Puneet Goyal</div></a>
                         <div class="member-affil">Indian Institute of Technology (IIT) Ropar, India</div>
                     </div>
                 </div>
